fixes for 0 margin btn-toolbar separator on mobile

--- a/src/sass/_buttons.scss
+++ b/src/sass/_buttons.scss
@@ -67,11 +67,13 @@
         }
     }
 }
-// TODO on mobile, margin separator should be 0
+
 .btn-toolbar {
     @include clearfix;
     .btn-group {
         float:left;
-        margin-right: 10px;
+        @include medium-and-up {
+            margin-right: 10px;
+        }
     }
 }
